@@ -173,6 +173,8 @@ SYM: NIL
 SYM: NIL
 SYM: NIL
 SYM: T
+SYM: T
+SYM: T
 SYM: NIL
 SYM: NIL
 SYM: NIL
