@@ -10,4 +10,5 @@
       * Introduced preallocated memory for Expressions
       * Introduced packed structure format for Expressions
 	  * Added functions: /
+	  * Added predicats to check for type of an expression
 
